[US0002] - Extracted static strings from activity_summary - Populate subscription related views

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.jzarsuelo.android.myapplication"
+        applicationId "com.jzarsuelo.android.amaysim"
         minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
